[package]
name = "internal-log-fetcher"
version = "0.1.0"
authors = ["Bruno Deferrari <bruno.deferrari@viablesystems.io>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
chrono = "0.4.24"
ed25519-dalek = "1.0.1"
futures-util = "0.3.28"
graphql_client = { version = "0.12", features = ["reqwest-blocking"] }
object_store = { version = "0.6.0", features = ["reqwest", "gcp", "serde", "serde_json"] }
rand = "0.7"
reqwest = { version = "0.11", features = ["json"]}
serde = "1.0.160"
serde_json = { version = "1.0", features = ["raw_value"] }
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
